# livelybot_robot

./: .gitmodules  README.md  t.md  test_imu.sh  test_motor.sh  test_motor_run.sh  test_rviz.sh  装配备忘录.md
src/: 装配备忘录.md
src/livelybot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/livelybot_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  livelybot_gazebo.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/livelybot_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  move_group_lvb.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  read_model.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/livelybot_moveit/scripts/: get_J.py
src/livelybot_moveit/src/: test_get_jocbia.cpp
